--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "process": "^0.11.0",
     "punycode": "^2.1.0",
     "querystring-es3": "^0.2.0",
-    "react-native-crypto": "^2.0.1",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-randombytes": "^3.5.1",
     "readable-stream": "^2.2.9",
     "stream-http": "^2.3.1",
@@ -29,7 +29,8 @@
     "timers-browserify": "^2.0.2",
     "tty-browserify": "0.0.0",
     "url": "^0.11.0",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "vm-browserify": "^1.1.2"
   },
   "homepage": "http://github.com/parshap/node-libs-react-native",
   "main": "index.js",
