--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "process": "^0.11.0",
     "punycode": "^2.1.0",
     "querystring-es3": "^0.2.0",
-    "react-native-crypto-js": "^1.0.0",
+    "expo-crypto": "^8.0.0",
     "react-native-randombytes": "^3.5.1",
     "readable-stream": "^2.2.9",
     "stream-http": "^2.3.1",
